# meicem

./: .gitignore  CMakeLists.txt  README.md
docs/: release_notes.txt
docs/build_settings/: doxygen-configuration
models/basic_MoM_test_models/: create_test1_2triangles_model.lua  create_test2_4triangles_model.lua  create_test3_plate_model.lua  create_test4_mixed_model.lua  test1_2triangles.bof  test1_2triangles.cfm  test1_2triangles.cfx  test1_2triangles.cfx.bak  test1_2triangles.map  test1_2triangles.nas  test1_2triangles.ol  test1_2triangles.os  test1_2triangles.pre  test2_4triangles.bof  test2_4triangles.cfm  test2_4triangles.cfx  test2_4triangles.cfx.bak  test2_4triangles.fek  test2_4triangles.map  test2_4triangles.nas  test2_4triangles.ol  test2_4triangles.os  test2_4triangles.pfs  test2_4triangles.str  test3_plate.bof  test3_plate.cfm  test3_plate.cfx  test3_plate.fek  test3_plate.map  test3_plate.nas  test3_plate.ol  test3_plate.os  test3_plate.pre  test3_plate.str  test4_mixed.bof  test4_mixed.cfm  test4_mixed.cfs  test4_mixed.cfx  test4_mixed.cfx.bak  test4_mixed.fek  (+8 more)
models/meicem_planewave_tests/: test1.bof  test1.cfm  test1.cfs  test1.cfx  test1.cfx.bak  test1.fek  test1.pre  test1.str  test1_NearField11.efe  test1_NearField11.hfe  test1_NearField12.efe  test1_NearField12.hfe  test1_NearField21.efe  test1_NearField21.hfe  test1_NearField22.efe  test1_NearField22.hfe
models/meicem_simple_plate_test/: create_currents_dataset.lua  create_currents_dataset.pfs  mini_plate_test.bof  mini_plate_test.cfm  mini_plate_test.cfs  mini_plate_test.cfx  mini_plate_test.fek  mini_plate_test.map  mini_plate_test.nas  mini_plate_test.nas.backup  mini_plate_test.ol  mini_plate_test.os  mini_plate_test.pfs  mini_plate_test.pre  mini_plate_test.str  mini_plate_test2.bof  mini_plate_test2.cfm  mini_plate_test2.cfs  mini_plate_test2.cfx  mini_plate_test2.fek  (+33 more)
src/: meicem.cpp
src/libraries/: CMakeLists.txt
src/libraries/EMconst/: CMakeLists.txt
src/libraries/EMconst/include/: EMconst.hpp
src/libraries/math/: CMakeLists.txt
src/libraries/math/include/: ComplexMatrix.hpp  Quadrature.hpp  Vector.hpp
src/libraries/math/src/: ComplexMatrix.cpp  Quadrature.cpp  Vector.cpp
src/libraries/math/test/: CMakeLists.txt
src/libraries/math/test/src/: ComplexMatrix.test.cpp  Quadrature.test.cpp  Vector.test.cpp  main.test.cpp
src/libraries/mesh/: CMakeLists.txt
src/libraries/mesh/include/: Edge.hpp  EdgeContainer.hpp  LabelContainer.hpp  Node.hpp  NodeContainer.hpp  Point3D.hpp  Point3DContainer.hpp  Triangle.hpp  TriangleContainer.hpp
src/libraries/mesh/src/: Edge.cpp  EdgeContainer.cpp  LabelContainer.cpp  Node.cpp  NodeContainer.cpp  Point3D.cpp  Point3DContainer.cpp  Triangle.cpp  TriangleContainer.cpp
src/libraries/mesh/test/: CMakeLists.txt
src/libraries/mesh/test/src/: Edge.test.cpp  EdgeContainer.test.cpp  LabelContainer.test.cpp  Node.test.cpp  NodeContainer.test.cpp  Point3D.test.cpp  Point3DContainer.test.cpp  Triangle.test.cpp  TriangleContainer.test.cpp  main.test.cpp
src/libraries/mom_3d/: CMakeLists.txt
src/libraries/mom_3d/include/: MoM.hpp  NearFieldContainer.hpp  NearFieldValue.hpp  PlaneWave.hpp
src/libraries/mom_3d/src/: MoM.cpp  NearFieldContainer.cpp  NearFieldValue.cpp  PlaneWave.cpp
src/libraries/mom_3d/test/: CMakeLists.txt
src/libraries/mom_3d/test/models/test1_2triangles/: create_test1_2triangles_model.lua  test1_2triangles.bof  test1_2triangles.cfm  test1_2triangles.cfx  test1_2triangles.cfx.bak  test1_2triangles.fek  test1_2triangles.map  test1_2triangles.nas  test1_2triangles.ol  test1_2triangles.os  test1_2triangles.str  test1_2triangles_rotate.map  test1_2triangles_rotate.nas
src/libraries/mom_3d/test/models/test2_4triangles/: create_test2_4triangles_model.lua  test2_4triangles.cfm  test2_4triangles.cfs  test2_4triangles.cfx  test2_4triangles.cfx.bak  test2_4triangles.map  test2_4triangles.nas  test2_4triangles.pre  test2_4triangles_rotate.map  test2_4triangles_rotate.nas
src/libraries/mom_3d/test/models/test3_plate/: ans  create_test3_plate_model.lua  test3_plate.bof  test3_plate.cfm  test3_plate.cfx  test3_plate.cfx.bak  test3_plate.fek  test3_plate.map  test3_plate.nas  test3_plate.ol  test3_plate.os  test3_plate.str  test3_plate_orig_1.pre  test3_plate_rotate.bof  test3_plate_rotate.cfm  test3_plate_rotate.cfs  test3_plate_rotate.cfx  test3_plate_rotate.cfx.bak  test3_plate_rotate.fek  test3_plate_rotate.nas  test3_plate_rotate.ol  test3_plate_rotate.os  test3_plate_rotate.pre  test3_plate_rotate.pre.bak  test3_plate_rotate.str
src/libraries/mom_3d/test/models/test4_mixed/: ans  create_test4_mixed_model.lua  test4_mixed.bof  test4_mixed.cfm  test4_mixed.cfs  test4_mixed.cfx  test4_mixed.cfx.bak  test4_mixed.fek  test4_mixed.nas  test4_mixed.ol  test4_mixed.os  test4_mixed.pfs  test4_mixed.str  test4_mixed_rotate.bof  test4_mixed_rotate.cfm  test4_mixed_rotate.cfx  test4_mixed_rotate.cfx.bak  test4_mixed_rotate.fek  test4_mixed_rotate.nas  test4_mixed_rotate.ol  test4_mixed_rotate.os  test4_mixed_rotate.pre  test4_mixed_rotate.pre.bak  test4_mixed_rotate.str
src/libraries/mom_3d/test/src/: MoM.test.cpp  NearFieldContainer.test.cpp  NearFieldValue.test.cpp  PlaneWave.test.cpp  main.test.cpp
src/libraries/reader_nastran/: CMakeLists.txt
src/libraries/reader_nastran/include/: reader_nastran.hpp
src/libraries/reader_nastran/src/: reader_nastran.cpp
src/libraries/reader_nastran/test/: CMakeLists.txt
src/libraries/reader_nastran/test/src/: main.test.cpp  reader_nastran.test.cpp
src/libraries/reader_nastran/test/test_files/: simple_triangles_long.map  simple_triangles_long.nas
src/libraries/reader_wilco_input/: CMakeLists.txt
src/libraries/reader_wilco_input/include/: reader_wilco_input.hpp
src/libraries/reader_wilco_input/src/: reader_wilco_input.cpp
src/libraries/reader_wilco_input/test/: CMakeLists.txt
src/libraries/reader_wilco_input/test/src/: main.test.cpp  reader_wilco_input.test.cpp
src/libraries/reader_wilco_input/test/test_files/: input_cononical_1basisfunction.txt  input_cononical_2basisfunction.txt
(+10 files in other folders)
