## Specify the minimum version for CMake
cmake_minimum_required(VERSION 3.5)

#add_library(EMconst)
#add_library(EMconst ${CMAKE_CURRENT_SOURCE_DIR}/include/EMconst.hpp)
#target_include_directories(EMconst PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
#include_directories(EMconst PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
#add_custom_target(EMconst SOURCES EMconst.hpp)
